# localparle

./: .gitignore  JOURNAL.md  LICENSE  Makefile  README.md  french_proposal.md  pyproject.toml  rubric.md
configs/: data.yaml  train.yaml  train_test.yaml  train_test_chain.yaml  train_test_ddp.yaml  train_test_v2.yaml  train_v2.yaml  tutor.yaml  tutor_pi.yaml
docs/: architecture.md  progress_report.md  training.md  tutor_pedagogy.md  wsl_setup.md
docs/results/: lm_tune.json  wer_table.md
scripts/: build_cefr_lookup.py  build_lm.py  build_wiki_lm.sh  evaluate.py  evaluate.slurm  evaluate_lm.slurm  parse_ncea_vocab.py  plot_wer_cer.py  prepare_data.py  serve_web.py  train.py  train_hpc.slurm  train_hpc_v2.slurm  train_hpc_v2_l40.slurm  train_test.slurm  train_test_chain.slurm  train_test_ddp.slurm  train_test_v2.slurm  train_v2.py  tune_lm.py  tutor_cli.py  tutor_gradio.py  tutor_text.py
src/french_tutor/: __init__.py  apps.py  audio_io.py  config.py  data.py  data_v2.py  learner_state.py  model.py  model_v2.py  pedagogy.py  prompt_builder.py  scenarios.py  system_prompt_fr.txt  train.py  train_v2.py  tutor.py  utils.py
static/: index.html
tests/: conftest.py  test_data.py  test_learner_state.py  test_metrics.py  test_pedagogy.py  test_prompt_builder.py  test_scenarios.py  test_tutor.py  test_vad.py
