[project]
name = "french-tutor"
version = "0.1.0"
description = "Local AI French language tutor: fine-tuned wav2vec 2.0 ASR + Mistral via Ollama + Piper TTS."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "ph00nWTF" }]

dependencies = [
    "torch>=2.6,<3",
    "torchaudio>=2.6,<3",
    "transformers>=4.41,<5",       # 5.x renamed evaluation_strategy → eval_strategy; tutorials target 4.x
    "datasets>=2.20",
    "datacollective>=0.5,<0.6",    # MDC SDK; pin tight — README warns of breaking changes during 0.x
    "accelerate>=0.31",
    "jiwer>=3.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "webrtcvad>=2.0.10",
    "setuptools<81",  # webrtcvad imports pkg_resources, removed in setuptools 81+
    "httpx>=0.27",
    "gradio>=5.0,<6",               # 4.x had boolean-schema crash in gradio_client; 6.x renamed Audio source kwarg
    "rich>=13",
    "pydantic-settings>=2.3",
    "pyyaml>=6",
    "tensorboard>=2.16",
    "numpy>=1.26,<2",
    "tqdm>=4.66",
    "pyctcdecode>=0.5.0",
    "kenlm>=0.3.0",
    "piper-tts>=1.4.2",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "types-PyYAML>=6",
]

# Added only if Phase 5 misses the WER target.
lm = [
    "pyctcdecode>=0.5",
    "kenlm>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/french_tutor"]

# PyTorch CUDA 12.1 wheels live on a separate index.
# uv resolves torch from there, everything else from PyPI.
[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "wikiextractor>=3.0.6",
]
